# Jetson_Project

./: .gitignore  CMakeLists.txt  README.md  face_detection.cpp  motor_demo.py
JHPWMPCA9685/src/: CMakeLists.txt
Motor_driver/: CMakeLists.txt  L298N_Jetson.cpp  L298N_Jetson.hpp
example/: Makefile  servoExample.cpp
include/: definitions.h  face_detection.hpp  motor_test.hpp
lib/: CMakeLists.txt
lib/Motor_driver/: CMakeLists.txt  definitions.h  motor_driver.cpp  motor_driver.hpp
lib/Servo_driver/: CMakeLists.txt  servo_driver.hpp
lib/Servo_driver/JHPWMPCA9685/: CMakeLists.txt
lib/driver/: CMakeLists.txt  driver.cpp  driver.hpp
lib/driver/JHPWMPCA9685/: JHPWMPCA9685.cpp  JHPWMPCA9685.hpp
lib/driver/PCA9685/: CMakeLists.txt  PCA9685.cpp
lib/handler/: CMakeLists.txt  handler.hpp
src/: CMakeLists.txt  face_detection.cpp  motor_driver.cpp  motor_test.cpp  servo_test.cpp
